[workspace.package]
version = "3.0.2"
authors = ["Moses Palmér <mosespalmer@gmail.com>"]
edition = "2021"

[workspace.dependencies]
actix-web = "4.4"
bit-set = "0.5"
clap = { version = "4.4", features = [ "cargo" ] }
futures-util = "0.3"
image = "0.24"
lazy_static = "1.4"
rand = "0.8"
rayon = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
svg = "0.14"

[workspace]
members = [
    "maze",
    "maker",
    "test",
    "tools",
    "web",
]

[profile.bench]
debug = true
