[workspace.package]
version = "3.1.1"
authors = ["Moses Palmér <mosespalmer@gmail.com>"]
edition = "2021"

[workspace.dependencies]
actix-web = "4.9"
bit-set = "0.5"
clap = { version = "4.5", features = [ "cargo", "derive" ] }
futures-util = "0.3"
image = "0.25"
lazy_static = "1.5"
rand = "0.8"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
svg = "0.17"

[workspace]
resolver = "2"
members = [
    "maze",
    "maker",
    "test",
    "tools",
    "web",
]

[profile.bench]
debug = true
