[package]
name = "maze-maker"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
maze = { path = "../maze" }
maze-tools = { path = "../tools" }

clap = { workspace = true }
image = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
svg = { workspace = true }
