[package]
name = "maze-wasm"
version = "0.1.0"
authors = ["Moses Palmér <mosespalmer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
maze = { path = "../maze" }
js-sys = "*"
nalgebra = "0.17.2"
rand = "0.4"
wasm-bindgen = "=0.2.34"

[dependencies.web-sys]
version = "0.3.7"
features = [
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlRenderbuffer',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'Window',
  'console',
]
