[package]
name = "maze"
version = "2.1.1"
authors = ["Moses Palmér <mosespalmer@gmail.com>"]
edition = "2018"

[dependencies]
rand = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
svg = { version = "0.5", optional = true }
maze-test = { path = "../test" }

[dev-dependencies]
serde_json = "*"

[features]
default = ["osrand", "render-svg"]
osrand = ["rand"]
render-svg = ["svg"]
