[package]
name = "maze"
version = "2.3.0"
authors = ["Moses Palmér <mosespalmer@gmail.com>"]
edition = "2018"

[dependencies]
rand = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
svg = { version = "0.8", optional = true }
maze-test = { path = "../test" }

[dev-dependencies]
serde_json = "*"

[features]
default = ["rand", "serde", "svg"]
