[package]
name = "maze"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
maze-test = { path = "../test" }

rand = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
svg = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
criterion = "0.5"

[[bench]]
name = "initialize"
harness = false

[features]
default = ["rand", "serde", "svg"]
