[package]
name = "maze-web"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
maze = { path = "../maze" }

actix-web = { workspace = true }
futures-util = { workspace = true }
rand =  { workspace = true }
serde =  { workspace = true }
svg =  { workspace = true }

[dev-dependencies]
serde_urlencoded = { workspace = true }
